--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,16 @@
 }
 
 .jumbotron {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.419);
     background-image: url(../images/Twees--03.png);
     text-align: center;
 }
 .jumbotron .btn btn-lg{
     justify-items: center;
+    background-color:#00ff00;
+}
+.jumbotron .btn btn-lg :hover{
+    box-shadow:40px 40px 10px #00ff00;
 }
 .btn{
     color:#ff0000;
@@ -45,7 +49,7 @@
     border-color: #00ff00;
 }
 .btn :hover {
-    background-color: rgb(255, 0, 0);
+    box-shadow:10px 10px white;
 }
 .cardContainer{
     padding:20px;
